# deep-linear-bandits

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
dev-notebooks/: dev 04 03.ipynb  dev 17.02.ipynb  dev 21 02.ipynb  dev.ipynb
models/: two_tower.pt
notebooks/: sanity_check.ipynb
simulations/deeper/: final_round.txt
simulations/deeper-cont/: final_round.txt
simulations/default/: final_round.txt
simulations/default-cont/: final_round.txt
simulations/dim-16/: final_round.txt
simulations/dim-16-cont/: final_round.txt
simulations/dim-64/: final_round.txt
simulations/dim-64-cont/: final_round.txt
simulations/full-softmax-neg/: final_round.txt
simulations/full-softmax-neg-cont/: final_round.txt
simulations/id-only-mf/: final_round.txt
simulations/id-only-mf-cont/: final_round.txt
simulations/in-batch-neg/: final_round.txt
simulations/in-batch-neg-cont/: final_round.txt
simulations/narrower/: final_round.txt
simulations/narrower-cont/: final_round.txt
simulations/no-l2/: final_round.txt
simulations/no-l2-cont/: final_round.txt
simulations/no-relu/: final_round.txt
simulations/no-relu-cont/: final_round.txt
simulations/no-sidefeats/: final_round.txt
simulations/no-sidefeats-cont/: final_round.txt
simulations/pop-weight-neg/: final_round.txt
simulations/pop-weight-neg-cont/: final_round.txt
simulations/score-weight-neg/: final_round.txt
simulations/score-weight-neg-cont/: final_round.txt
simulations/shallower/: final_round.txt
simulations/shallower-cont/: final_round.txt
simulations/user-uniform-neg/: final_round.txt
simulations/user-uniform-neg-cont/: final_round.txt
simulations/weighted-loss/: final_round.txt
simulations/weighted-loss-cont/: final_round.txt
simulations/wider/: final_round.txt
simulations/wider-cont/: final_round.txt
simulations/wr-banded-neg/: final_round.txt
simulations/wr-banded-neg-cont/: final_round.txt
slurm/: collate.sbatch  simulate-all.sh  simulate.sbatch  train-all-tts.sh  train-tt.sbatch
slurm/old_jobs/: joboutput_1302234.err  joboutput_1302234.out  joboutput_1302235.err  joboutput_1302235.out  joboutput_1302236.err  joboutput_1302236.out  joboutput_1302237.err  joboutput_1302237.out  joboutput_1302238.err  joboutput_1302238.out  joboutput_1302239.err  joboutput_1302239.out  joboutput_1302240.err  joboutput_1302240.out  joboutput_1302241.err  joboutput_1302241.out  joboutput_1302242.err  joboutput_1302242.out  (+20 more)
(+215 files in other folders)
