[project]
name = "deep-linear-bandits"
version = "0.1.0"
description = "An investigation into multi-armed bandits (MABs), specifically generalisations such as the contextual bandit and their solutions, for alleviating existing policy bias and encouraging exploration in modern deep-learning recommendation systems."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "torch>=2.10.0",
]

[project.scripts]
dlb = "deep_linear_bandits:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
