[project]
name = "deep-linear-bandits"
version = "0.1.0"
description = "An investigation into multi-armed bandits (MABs), specifically generalisations such as the contextual bandit and their solutions, for alleviating existing policy bias and encouraging exploration in modern deep-learning recommendation systems."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.10.0",
]
gpu = [
    "torch>=2.10.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
dlb = "deep_linear_bandits.main:cli"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
